# merge_pictures

./: .gitignore  BUILD_WINDOWS.md  PLAN.md  README.md  USER_MANUAL_KO.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: bootstrap-windows.ps1  release-windows.ps1
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: manual_verify.rs
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/domain/: merge.rs  mod.rs
src-tauri/src/services/: merger.rs
src-tauri/tests/: merge_pipeline.rs
src/lib/: files.test.ts  files.ts
