[package]
name = "merge-picture"
version = "0.1.0"
description = "Desktop PDF merger for images and PDFs"
authors = ["jonghochoi"]
edition = "2024"
default-run = "merge-picture"

[lib]
name = "merge_picture_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
image = { version = "0.25", default-features = true, features = ["jpeg", "png", "webp"] }
lopdf = "0.35"
printpdf = { version = "0.8", default-features = false, features = ["png", "jpeg", "webp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2"
tempfile = "3"
thiserror = "2"

[dev-dependencies]
